@@ -1,3 +1,7 @@
+2001-01-10  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* CatJob.cc, CatJob.h: use DontFailIfBroken.
+
 2001-01-10  Glenn Maynard <g_ld@zewt.org>
 
 	* FileCopy.cc, FileCopy.h: (fail_if_broken) new member.
